--- a/app/src/main/res/layout/menu_principal_layout.xml
+++ b/app/src/main/res/layout/menu_principal_layout.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:gravity="center_vertical"
+    android:orientation="vertical"
     tools:context=".MenuPrincipalActivity">
 
     <ImageView
-        android:id="@+id/imgPink" pe="centerCrop"
-        android:layout_gravity="center_horizontal"
+        android:id="@+id/imgMenuPrincipal"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:src="@drawable/pink"/>
+        android:layout_gravity="center_horizontal"
+        android:scaleType="centerCrop"
+        android:src="@drawable/pink" />
 
 
 </LinearLayout>
