--- a/app/src/main/res/layout/itens_miniatura_layout.xml
+++ b/app/src/main/res/layout/itens_miniatura_layout.xml
@@ -8,24 +8,25 @@
     tools:context=".ItensMiniaturaActivity">
 
     <com.google.android.material.tabs.TabLayout
+        android:id="@+id/idTabLayoutItensMiniatura"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/idTabLayoutItensMiniatura">
+        app:tabMode="fixed">
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Miniaturas"/>
+            android:text="Miniaturas" />
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Acessórios"/>
+            android:text="Acessórios" />
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Loja"/>
+            android:text="Loja" />
 
     </com.google.android.material.tabs.TabLayout>
 
