--- a/app/src/main/res/layout/itens_miniatura_layout.xml
+++ b/app/src/main/res/layout/itens_miniatura_layout.xml
@@ -10,20 +10,21 @@
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/idAppBarItensMiniatura"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content" >
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/idToolBarItens"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:navigationIcon="@drawable/baseline_arrow_back"
-        app:title="Miniaturas"
-        android:layout_height="wrap_content" />
+        app:title="Miniaturas" />
+    </com.google.android.material.appbar.AppBarLayout>
 
     <com.google.android.material.tabs.TabLayout
-        android:layout_below="@+id/idAppBarItensMiniatura"
         android:id="@+id/idTabLayoutItensMiniatura"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/idAppBarItensMiniatura"
         app:tabMode="fixed">
 
         <com.google.android.material.tabs.TabItem
