--- a/app/src/main/res/layout/itens_miniatura_layout.xml
+++ b/app/src/main/res/layout/itens_miniatura_layout.xml
@@ -10,14 +10,14 @@
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/idAppBarItensMiniatura"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content">
 
-    <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/idToolBarItens"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:navigationIcon="@drawable/baseline_arrow_back"
-        app:title="Miniaturas" />
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/idToolBarItens"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:navigationIcon="@drawable/baseline_arrow_back"
+            app:title="Miniaturas" />
     </com.google.android.material.appbar.AppBarLayout>
 
     <com.google.android.material.tabs.TabLayout
@@ -43,5 +43,11 @@
             android:text="Loja" />
 
     </com.google.android.material.tabs.TabLayout>
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/idViewPagerItensMiniatura"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/idTabLayoutItensMiniatura" />
 
 </RelativeLayout>
