--- a/app/src/main/res/layout/fragment_acessorios.xml
+++ b/app/src/main/res/layout/fragment_acessorios.xml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#B6E6D3"
+    android:gravity="center_vertical"
+    android:orientation="vertical"
     tools:context=".AcessoriosFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="Acessórios"
+        android:textColor="#9283"
+        android:textSize="35sp"
+        android:textStyle="bold" />
 
-</FrameLayout>
+</LinearLayout>
