--- a/app/src/main/res/layout/fragment_miniaturas.xml
+++ b/app/src/main/res/layout/fragment_miniaturas.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#2c2c"
-    android:gravity="center_horizontal"
+    android:gravity="center_vertical"
     android:orientation="vertical"
     tools:context=".MiniaturasFragment">
 
