--- a/app/src/main/res/layout/menu_principal_layout.xml
+++ b/app/src/main/res/layout/menu_principal_layout.xml
@@ -8,7 +8,13 @@
     android:gravity="center_vertical"
     android:orientation="vertical"
     tools:context=".MenuPrincipalActivity">
-
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text=""
+    android:textColor=""
+    android:textStyle=""
+    />
     <ImageView
         android:id="@+id/imgMenuPrincipal"
         android:layout_width="150dp"
