--- a/app/src/main/res/layout/menu_principal_layout.xml
+++ b/app/src/main/res/layout/menu_principal_layout.xml
@@ -11,9 +11,11 @@
 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text=""
-    android:textColor=""
-    android:textStyle=""
+    android:text="Among Us"
+    android:textColor="#D32DBE"
+    android:textStyle="bold"
+    android:textSize="30sp"
+    android:layout_gravity="center_horizontal"
     />
     <ImageView
         android:id="@+id/imgMenuPrincipal"
