--- a/app/src/main/res/layout/fragment_loja.xml
+++ b/app/src/main/res/layout/fragment_loja.xml
@@ -10,8 +10,8 @@
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="Loja"
         android:textColor="#9926568E"
