--- a/app/src/main/res/layout/fragment_miniaturas.xml
+++ b/app/src/main/res/layout/fragment_miniaturas.xml
@@ -4,18 +4,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#2c2c"
-    android:gravity="center_vertical"
+    android:gravity="center_horizontal"
     android:orientation="vertical"
     tools:context=".MiniaturasFragment">
 
     <!-- TODO: Update blank fragment layout -->
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
         android:text="Miniatura"
         android:textColor="#DEB8CD"
         android:textSize="35sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:fontFamily=""
+        />
 
 </LinearLayout>
