Hallison fazendo perguntas: Tom: -_-

--- a/app/src/main/res/layout/fragment_miniaturas.xml
+++ b/app/src/main/res/layout/fragment_miniaturas.xml
@@ -6,7 +6,9 @@
     android:background="#2c2c"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context=".MiniaturasFragment">
+    tools:context=".MiniaturasFragment"
+    android:id="@+id/FragmentMiniatura"
+    >
 
     <!-- TODO: Update blank fragment layout -->
 
